# dynamic-cpp

./: .gitignore  CMakeLists.txt  COPYING.txt  Doxyfile  ProjectHome.md  README.txt  array.cpp  assign.cpp  ctor.cpp  dict.cpp  dynamic.cpp  dynamic.h  dynamic.sln  dynamic.vcproj  iterator.cpp  iterator_visitors.h  list.cpp  makefile  rebuild  rebuild.bat  relational.cpp  relational_visitors.h  set.cpp  todo.txt  types.cpp  visitors.h
dynamic.xcodeproj/: project.pbxproj
include/dynamic/: dynamic.hpp  exception.hpp  var.hpp
src/: assign.cpp  ctor.cpp  dynamic.cpp  iterator.cpp  relational.cpp  types.cpp
tests/: CMakeLists.txt  test_collections.cpp  test_relational_eq.cpp  test_relational_ne.cpp  tests.cpp  tests.vcproj
